# rs-hackernews-cli

./: .gitignore  .travis.yml  LICENSE.md  build.sh  errors.txt  features.txt  readme.md  todo.txt
cli/: Cargo.toml
cli/res/: help.txt
cli/res/test/: children-item.json  dead-item.json  formatted-item-with-html.txt  item-with-children-2.json  item-with-html.json  item-with-preformatted-code.json
cli/src/: app.rs  cli.rs  cli_colors.rs  cli_html_formatting.rs  client.rs  logging_utils.rs  main.rs  models.rs  text_decoding.rs  text_decoding_entities.rs  text_decoding_io.rs  utils.rs
cli/src/core/: app.rs  client.rs  connector.rs  endpoint.rs  mod.rs  models.rs
cli/src/decoding/: mod.rs  text_decoding.rs
cli/src/formatting/: formatter.rs  general_formatter.rs  mod.rs  tag_formatter.rs  tokens.rs
cli/src/helpers/: gen_utils.rs  io_utils.rs  logging_utils.rs  mod.rs  path_utils.rs
cli/src/ui/: backend.rs  cli.rs  colors.rs  mod.rs
rs-ycomb/: Cargo.toml
rs-ycomb-hn-cli/: Cargo.toml
rs-ycomb-hn-cli/res/test/: item-with-children-1.json  item.json  max-item.json  top-stories.json  user.json
rs-ycomb-hn-cli/src/: app.rs  cli.rs  client.rs  endpoint.rs  main.rs  models.rs  utils.rs
rs-ycomb/src/: client.rs  main.rs
