[package]
name = "rs-hackernews-cli"
version = "0.2.0"
authors = ["Johannes Sarpola <johannes.sarpola@gmail.com>"]

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json= "^1.0"
futures = "0.1.11"
futures-cpupool = "0.1"
hyper = { git = "https://github.com/hyperium/hyper"}
tokio-core = "0.1.6"
tokio-proto = "0.1"
tokio-service = "^0.1"
tokio-io = "0.1"
tokio-tls = "*"
native-tls = "*"
slog = "1.5.2"
slog-term = "1.5.0"
slog-stream = "*"
time = "*"
curl = "0.4.6"
webbrowser = "0.2.2"
termion = "*"

[dev-dependencies]
num_cpus = "1.0"
pretty_env_logger = "0.1"
spmc = "0.2"

[features]
default = []
nightly = []